fix title alignment

--- a/src/components/pie-player/style/people-theme.css
+++ b/src/components/pie-player/style/people-theme.css
@@ -12,6 +12,7 @@
 .jc-podcast-people-wrapper > .podcast-people-header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .jc-podcast-people-wrapper .podcast-people-container {
